# 3c2a

./: .gitignore  ANALYSIS.md  README.md  SCHEMA.md  SCRAPING_PIPELINE.md  SJCC-test.html  command.txt  enrich_plays.py  foothill-cv.code-workspace  health.py  health_check.py  parse_pbp.py  pbp_output.csv  pyproject.toml  scrape_season.py  sjcc-test.csv  summary_stats.py  test_chabot25.csv
.claude/: settings.local.json
analysis/: export_chart_data.py  helpers.py  plot_charts.py  plot_rankings.py  table_early_down.py  table_explosives.py  table_finishing_drives.py  table_fourth_down.py  table_hidden_yards.py  table_passing_down.py  table_production.py  table_redzone.py  table_third_down.py
duckdb_pipeline/: .gitignore  LOGS.md  README.md  RUNS.md  __init__.py  pyproject.toml
duckdb_pipeline/src/duckdb_pipeline/: __init__.py  cli.py  constants.py  crosswalk.py  db.py  parse.py  scrape.py
duckdb_pipeline/tests/: test_cli.py  test_crosswalk.py  test_db.py  test_parse.py
manual/: 20250830_2iqk-participation.html  20250830_6c8s-participation.html  20250830_yeeo.html  20250913_0tz1.html  20250913_ak0q-REAL.html  20250913_ak0q.html  20250927_d2vr.html  20250927_fnfm.html  20251009_tcnz.html  20251101_ca8g.html  20251213_807z-participation.html  allan-hancock-roster.html  cor-roster-url.html  foothill-roster.html  mpc-roster-url.html  mtsac-player.html  mtsac-roster.html
pipeline/: 01_scrape_season.py  02_scrape_participation.py  03_check_season.py  04_generate_field_pos_crosswalk.py  04_scrape_rosters.py  05_build_player_crosswalk.py  06_apply_player_crosswalk.py  06_export_pbp_names.py  07_match_pbp_names.py  07_scrape_player_rosters.py  08_apply_player_crosswalk.py  09_match_pbp_names.py  10_review_pbp_names_local.py  10_scrape_lineup.py  find_prestosports_rosters.py  migrate_plays_schema.py  parse_pbp.py  reclean_plays.py
reports/: Foothill 2025-2026 Season Report (Final).docx  Foothill 2025-2026 Season Report.docx  build_report.py  ~$othill 2025-2026 Season Report (Final).docx
(+111 files in other folders)
