[project]
name = "duckdb-pipeline"
version = "0.1.0"
description = "DuckDB-backed Foothill structure scraper."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "duckdb>=1.1",
    "requests>=2.31",
]

[project.scripts]
scrape_season_structure = "duckdb_pipeline.cli:main"
scrape_season_plays = "duckdb_pipeline.cli:main_plays"
prepare_field_positions = "duckdb_pipeline.cli:main_prepare_field_positions"
resolve_field_position_prefix = "duckdb_pipeline.cli:main_resolve_field_position_prefix"
apply_field_positions = "duckdb_pipeline.cli:main_apply_field_positions"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
